# localstock

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  copilot-instructions.md  pyproject.toml  run_single.py
apps/prometheus/: pyproject.toml
apps/prometheus/alembic/versions/: 09380ec394d2_initial_schema_with_tz_aware_timestamps.py  24a1b2c3d4e5_pipeline_run_durations.py  25a0b1c2d3e4_phase25_dq_tables.py  823bee92cc2e_add_fk_constraint_on_sentiment_scores_.py  add_phase11_admin_tables.py  add_phase4_macro_report_tables.py
apps/prometheus/scripts/: lint-no-fstring-logs.sh
apps/prometheus/src/localstock/: __init__.py  config.py
apps/prometheus/tests/: conftest.py  test_admin.py  test_config_log_level.py  test_market_route.py
apps/prometheus/tests/test_ai/: test_client.py
apps/prometheus/tests/test_analysis/: test_industry.py  test_sentiment.py  test_signals.py  test_technical.py  test_trend.py
apps/prometheus/tests/test_api/: conftest.py  test_health_data_freshness.py  test_health_endpoints.py
apps/prometheus/tests/test_cache/: conftest.py  test_indicator_cache.py  test_invalidate.py  test_invalidation_integration.py  test_janitor.py  test_metrics_exposed.py  test_middleware.py  test_perf_market.py  test_perf_ranking.py  test_prewarm.py  test_registry.py  test_route_caching_integration.py  test_single_flight.py  test_versioning.py
apps/prometheus/tests/test_crawlers/: test_company_crawler.py  test_finance_crawler.py  test_price_crawler.py
apps/prometheus/tests/test_db/: test_migration_24_pipeline_durations.py  test_phase25_migration.py  test_pipeline_run_repo.py  test_stock_repo.py
apps/prometheus/tests/test_docs/: __init__.py  test_runbooks.py
apps/prometheus/tests/test_dq/: __init__.py  test_ohlcv_schema.py  test_quarantine_repo.py  test_sanitizer.py  test_tier2_dispatch.py
apps/prometheus/tests/test_macro/: test_crawler.py  test_impact.py  test_scorer.py
apps/prometheus/tests/test_notifications/: test_formatters.py  test_telegram.py
apps/prometheus/tests/test_observability/: conftest.py  test_db_events.py  test_decorator_integration.py  test_decorators.py  test_diagnose_no_pii.py  test_idempotent.py  test_intercept.py  test_json_format.py  test_metrics.py  test_metrics_endpoint.py  test_redaction.py  test_request_id.py  test_request_log.py  test_run_id.py
apps/prometheus/tests/test_reports/: test_generator.py  test_price_levels.py  test_t3.py
apps/prometheus/tests/test_scheduler/: conftest.py  test_calendar.py  test_error_listener.py  test_health_self_probe.py  test_quarantine_cleanup.py
apps/prometheus/tests/test_scoring/: test_engine.py
apps/prometheus/tests/test_services/: test_analysis_service.py  test_pipeline_isolation.py  (+4 more)
(+843 files in other folders)
