[project]
name = "localstock"
version = "0.1.0"
description = "AI Stock Agent for Vietnamese Market (HOSE)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135,<1.0",
    "uvicorn[standard]>=0.44,<1.0",
    "pydantic>=2.13,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.31,<1.0",
    "alembic>=1.18,<2.0",
    "vnstock==3.5.1",
    "pandas>=2.2,<3.0",
    "httpx>=0.28,<1.0",
    "python-dotenv>=1.0,<2.0",
    "loguru>=0.7,<1.0",
    "tenacity>=9.0,<10.0",
    "pandas-ta>=0.4.71b0",
    "numpy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-timeout>=2.0,<3.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.0,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localstock"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "pytest-timeout>=2.4.0",
]
