[project]
name = "localstock"
version = "0.1.0"
description = "AI Stock Agent for Vietnamese Market (HOSE)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135,<1.0",
    "uvicorn[standard]>=0.44,<1.0",
    "pydantic>=2.13,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.31,<1.0",
    "alembic>=1.18,<2.0",
    "vnstock>=4.0.1,<5.0",
    "pandas>=2.2,<3.0",
    "httpx>=0.28,<1.0",
    "python-dotenv>=1.0,<2.0",
    "loguru>=0.7,<1.0",
    "tenacity>=9.0,<10.0",
    "prometheus-client>=0.21,<1.0",
    "prometheus-fastapi-instrumentator>=7.1,<8.0",
    "pandas-ta>=0.4.71b0",
    "numpy>=2.0,<3.0",
    "ollama>=0.6,<1.0",
    "beautifulsoup4>=4.14,<5.0",
    "lxml>=5.0,<6.0",
    "defusedxml>=0.7.1",
    "apscheduler>=3.11,<4.0",
    "python-telegram-bot>=22.0,<23.0",
    "holidays>=0.94,<1.0",
    "pandera[pandas]>=0.31,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-timeout>=2.0,<3.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.0,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localstock"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
markers = [
    "requires_pg: integration tests that require a real PostgreSQL database (skipped otherwise)",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "pytest-timeout>=2.4.0",
]
